# intellihoneypot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  bash.exe.stackdump  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/core/: exceptions.py  logging.py  redis_client.py
app/dashboard/: app.py
app/dashboard/routes/: credentials.py  honeypots.py  sessions.py  threats.py
app/dashboard/templates/: base.html  credentials.html  index.html  login.html  logout.html  sessions.html
app/honeypot/http/: app.py  middleware.py
app/honeypot/http/routes/: api_mock.py  (+2 more)
app/honeypot/ssh/: auth.py  server.py  shell.py  transport.py
app/llm/: cache.py  guardrails.py  orchestrator.py  prompt_builder.py  typing_sim.py
app/mesh/: broadcaster.py  listener.py
app/services/: __init__.py  whatsapp_alert_service.py
app/session/: manager.py  models.py  virtual_fs.py
app/telemetry/: cef_formatter.py  classifier.py  event_logger.py  syslog_forwarder.py
config/: fake_fs.json  persona_http.yaml  persona_ssh.yaml
docs/: TECHNICAL_REPORT.md
scripts/: benchmark_llm.py  generate_host_key.py  seed_redis.py
static/: jozef.jfif  ons.jfif
tests/: conftest.py
tests/integration/: test_http_portal.py  test_llm_fallback.py
tests/unit/: test_cef_formatter.py  test_classifier.py  test_dashboard_auth.py  test_guardrails.py  test_honeypots_route.py  test_response_cache.py  test_session_manager.py  test_virtual_fs.py  test_whatsapp_alert_service.py
workflow/: My workflow.json
(+3 files in other folders)
