[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "intellihoneypot"
version = "0.1.0"
description = "LLM-Based Intelligent Honeypot — PFA INSAT RT4"
authors = [{ name = "Youssef Hamdani", email = "youssef.hamdani@insat.ucar.tn" }]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "paramiko>=3.4",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.3",
    "redis[hiredis]>=5.0",
    "structlog>=24.0",
    "httpx>=0.27",
    "requests>=2.31",
    "bcrypt>=4.1",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "openai>=1.35",
    "anthropic>=0.28",
    "websockets>=12.0",
    "aiofiles>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "fakeredis[aioredis]>=2.23",
    "httpx>=0.27",
    "respx>=0.21",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-report=html"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ANN"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]
